# mtga-extractor

./: .gitignore  extract.py  pyproject.toml
