[tool.poetry]
name = "mtga-extractor"
version = "0.1.0"
description = ""
authors = ["Sauyon Lee <me <at> sjle <dot> co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
UnityPy = "^1.8.9"
pyjson5 = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
